--- a/ToDoAPI.Test/ToDoAPI.Test.csproj
+++ b/ToDoAPI.Test/ToDoAPI.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="Moq" Version="4.18.1" />
@@ -18,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToDoAPI.API\ToDoAPI.API.csproj" />
     <ProjectReference Include="..\ToDoAPI.DAL\ToDoAPI.DAL.csproj" />
   </ItemGroup>
 
